<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vacation Days</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="calendar">Calendar</string>
    <string name="apache"> Beta - Apache License 2.0</string>
    <string name="kotlin" translatable="false">Kotlin</string>
    <string name="java" translatable="false">Java</string>
    <string name="gnu">GNU General Public License, version 2, with the Classpath Exception</string>
    <string name="apachelicense">Apache License 2.0</string>
    <string name="nobobutton" translatable="false">NoboButton</string>
    <string name="circleimg" translatable="false">CircleImageView</string>
    <string name="backup">Delete any pre-existing backup files from your device first.</string>
    <string name="marvin" translatable="false">Crazy Marvin</string>
    <string name="developer">Developer</string>
    <string name="version" translatable="false">%1$s</string>
    <string name="codeaquaria" translatable="false">Code Acquaria</string>
    <string name="mubeen" translatable="false">Mubeen Ali</string>
    <string name="contribute">Contribute</string>
    <string name="translate">Translate</string>
    <string name="reportaproblem">Report a problem</string>
    <string name="viewSource">View source</string>
    <string name="openSourceLicences">Open-source licenses</string>
    <string name="featherIcons" translatable="false">Feather Icons</string>
    <string name="mitLicence">MIT License</string>
    <string name="materialdesignicons" translatable="false">Material Design Icons</string>
    <string name="apacheLicense">Apache License 2.0</string>
    <string name="androidJetpack" translatable="false">Android Jetpack</string>
    <string name="dateRangePicker" translatable="false">DateRangePicker</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>
    <string name="data">Data</string>
    <string name="backupheading">Backup</string>
    <string name="restore">Restore</string>
    <string name="addHoliday">Add Holiday Title</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="date_range" translatable="false">%s\n↓\n%s</string>
    <string name="followsys">Follow System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="noofvacations">Number of Vacation Days</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="empty_text">No Vacation Added</string>
    <string name="track">Track Sick Days</string>
    <string name="exclude_weekends">Exclude weekends</string>
    <string name="show_weekdays_header">Show weekdays header</string>
    <string name="enable_notification">Notifications</string>
    <string name="get_notified">Get notified of upcoming vacations</string>
    <string name="backupMessage">Backup Successful</string>
    <string name="vacation_days">No. of Vacation Days</string>
    <string name="junit">JUnit</string>
    <string name="eclipse_license">Eclipse Public License - v 2.0</string>
    <string name="delete_vacation">Vacation deleted</string>
    <string name="undo">Undo</string>
    <string name="empty_vacation">Please Enter Vacation Name!</string>
    <string name="empty_date">Please Select Start Date!</string>
    <string name="sick">Sick</string>
    <string name="vacation">Vacation</string>
    <string name="holiday">Holiday</string>
    <string name="name">Name</string>
    <string name="daysUntilVacation">Days Until Vacation</string>
    <string name="daysSinceVacation">Days Since Vacation</string>
    <string name="daysSinceSick">Days Since Sick</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="vacation_days_taken">Vacation Days Taken</string>
    <string name="vacation_days_planned">Vacation Days Planned</string>
    <string name="vacation_days_available">Vacation Days Available</string>
    <string name="sick_days_taken">Sick Days Taken</string>
    <string name="work_days">Work Days</string>
    <string name="no_upcoming_vacation">No upcoming vacation</string>
    <string name="days_since_vacation_and_sick_description">Days Since Vacation and Sick Leave</string>
    <string name="taken_and_available_description">Taken and Available Vacation Days</string>
    <string name="taken_planned_until_description">Taken Vacation Days, Planned Vacation Days, Days Until vacation</string>
    <string name="taken_planned_vacation_sick_description">Taken Vacation Days, Planned Vacation Days, Taken Sick Days</string>
    <string name="vacation_info_description">Taken Vacation Days, Planned Vacation Days, Taken Sick Days, Days Until Vacation</string>
    <string name="vacation_info_with_work_description">Taken Vacation Days, Planned Vacation Days, Taken Sick Days, Work Days</string>
    <string name="exceed_vacation_title">Too Few Vacation Days</string>
    <string name="exceed_vacation_description">The selected vacation days exceed the available number.</string>
    <string name="vacation_none">You have no planned vacations! 😱</string>
    <string name="vacation_first_upcoming">
        Your first vacation will be in %1$d days. Enjoy! 🏖️
    </string>
    <string name="vacation_last_ended">
        Your last vacation ended %1$d days ago and you did not plan a new one yet! 🙈
    </string>
    <string name="vacation_last_and_next">
        Your last vacation ended %1$d days ago and your next vacation will be in %2$d days. Enjoy! 🏖️
    </string>
    <string name="vacation_notification_title">Upcoming Vacation</string>
    <string name="vacation_channel_name">Vacation Notifications</string>
    <string name="notification_permission_denied">Notification permission denied!</string>
</resources>
