<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/label_floatingbtn"
        android:layout_below="@id/linearlayout"
        android:layout_marginTop="-1dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/appbar"
        android:gravity="center"
        android:background="@color/apptheme"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundlinearlayout"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/timeline"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_weight="1.5"
                android:background="@color/tabs"
                android:gravity="center"
                app:nb_radius="10dp"
                app:nb_text="@string/timeline"
                app:nb_textColor="@color/textcolorblack"
                app:nb_textSize="12sp" />

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/calendar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.5"
                app:nb_backgroundColor="@android:color/transparent"
                app:nb_radius="10dp"
                app:nb_text="@string/calendar"
                app:nb_textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/apptheme"
        android:gravity="bottom"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/toolbartext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/textcolorwhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/toolbartext2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/textcolorwhite"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--                <ImageView-->
                <!--                    android:id="@+id/label"-->
                <!--                    android:layout_width="25dp"-->
                <!--                    android:layout_height="25dp"-->
                <!--                    android:layout_marginRight="30dp"-->
                <!--                    android:background="@drawable/ic_menu"-->
                <!--                    />-->
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/label_floatingbtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/apptheme"
        android:onClick="floatingbuttonclicked"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/apptheme"
        app:tint="@android:color/white" />

</RelativeLayout>